--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "now-build": "next build",
     "start": "next start"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cross-env": "^5.2.0",
     "marked": "^0.6.1",
     "next": "^8.0.1",
     "react": "^16.8.2",
