--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "cross-env": "^5.2.0",
+    "dompurify": "^2.0.11",
     "marked": "^0.6.1",
     "next": "^9.3.2",
     "react": "^16.8.2",
