--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "dependencies": {
     "cross-env": "^5.2.1",
     "dompurify": "^2.0.12",
-    "marked": ">=0.7.0",
+    "marked": "^0.7.0",
     "next": "^9.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "resolutions": {
+    "node-fetch": "^2.6.1"
   }
 }
